--- a/wp-content/themes/Clixpert_Theme_2.0/style.css
+++ b/wp-content/themes/Clixpert_Theme_2.0/style.css
@@ -2340,7 +2340,7 @@ footer .current_page_item a {
 
   background-color: inherit !important;
 
-  color: #656464 !important;
+  color: #e7d430 !important;
 
 }
 header .current-menu-item a {
